data: cron update

--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -25789,27 +25789,21 @@ series:
         dtstart: 2022-12-14 18:00:00+01:00
         dtend: 2022-12-14 20:00:00+01:00
   - meetupcom:
-      meta_description: '**Pravidelný hospodský sraz komunity [Frontendisti.cz](http://frontendisti.cz/)**
-
-
-        **Program a místo budou upřesněny před konáním akce.**
-
-
-        Svoji přednášku můžeš přihlásit n'
-      og_title: 'Brno: Hospodský sraz - únor, Wed, Feb 8, 2023, 6:00 PM   | Meetup'
+      meta_description: Hospodský sraz komunity [Frontendisti.cz](http://frontendisti.cz/). Cílem hospodského srazu je vytvoření diskusního večera. Úplně klasické přednášky tedy nečekejte, zaměřím
+      og_title: 'Brno: Diskuzní večer o kompresi dat na webu, Wed, Feb 8, 2023, 6:00 PM   | Meetup'
       url: https://www.meetup.com/frontendisti/events/289061411/
       ical:
-        summary: 'Brno: Hospodský sraz - únor'
+        summary: 'Brno: Diskuzní večer o kompresi dat na webu'
         description: 'Frontendisti.cz
 
           Wednesday, February 8 at 6:00 PM
 
 
-          **Pravidelný hospodský sraz komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlási...
+          Hospodský sraz komunity (http://frontendisti.cz/). Cílem hospodského srazu je vytvoření diskusního večera. Úplně klasické přednášky tedy nečekejte, za...
 
 
           https://www.meetup.com/frontendisti/events/289061411/'
-        location: Café Trojka (Dominikánská 9, Brno-Brno-střed, Czech Republic 602 00)
+        location: BarCafé Éléphant (Lidická 705/43, Brno-střed-Veveří, Czech Republic 602 00)
         geo:
           lat: 50.08
           lon: 14.43
@@ -32251,6 +32245,30 @@ series:
         url: https://www.meetup.com/frontendisti/events/290872251/
         dtstart: 2023-02-22 18:00:00+01:00
         dtend: 2023-02-22 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Brno: Vánoční meetup | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, December 14 at 6:00 PM
+
+
+          **Zima je tady a pravidelný vánoční meetup komunity Frontendisti.cz se pod taktovkou SUPERKODERS koná 14.12. v Brně 🎄.**Přijďte se naladit na sváteční...
+
+
+          https://www.meetup.com/frontendisti/events/288945709/'
+        location: Hněvkovského 65 (Hněvkovského 65, Komárov, Brno-Brno-jih, Czech Republic 617 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288945709@meetup.com
+        url: https://www.meetup.com/frontendisti/events/288945709/
+        dtstart: 2022-12-14 18:00:00+01:00
+        dtend: 2022-12-14 20:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
