--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35908,9 +35908,9 @@ series:
         dtstart: 2023-01-31 18:00:00+01:00
         dtend: 2023-01-31 22:00:00+01:00
   - meetupcom:
-      meta_description: Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several ligh
-      og_title: '(BRNO) Data & AI/ML Lightning Talks: Recommendations, Deconstructed, Thu, Feb 2, 2023, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/strv-meetups/events/290896746/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: '(BRNO) Data & AI/ML Lightning Talks: Recommendations, Deconstructed'
         description: 'STRV Meetups
@@ -37271,3 +37271,30 @@ series:
         url: https://www.meetup.com/strv-meetups/events/290896731/
         dtstart: 2023-01-31 18:00:00+01:00
         dtend: 2023-01-31 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/529091897107)**
+
+
+        After a long time, the STRV Frontend team is organizing a meetup solely focused o'
+      og_title: (PRAGUE) React Native Meetup, Thu, Feb 16, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/291307881/
+      ical:
+        summary: (PRAGUE) React Native Meetup
+        description: 'STRV Meetups
+
+          Thursday, February 16 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/529091897107)** After a long time, the STRV Frontend team is organizing a meetup solely focused on React Native. Over ...
+
+
+          https://www.meetup.com/strv-meetups/events/291307881/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291307881@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/291307881/
+        dtstart: 2023-02-16 18:00:00+01:00
+        dtend: 2023-02-16 22:00:00+01:00
