data: cron update

--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -67650,3 +67650,60 @@ series:
         url: https://www.meetup.com/gdg-ostrava/events/278023608/
         dtstart: 2021-06-02 18:00:00+02:00
         dtend: 2021-06-02 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'A face-to-face event in 3 cities in Czechia and a stream – with a brunch!
+
+
+        2 amazing talks and networking.&nbsp;
+
+
+        - Jsem Multipotenciál by Lucie Václavíková
+
+
+        - Jak na Googl'
+      og_title: WTM IWD 2023, Sat, Mar 18, 2023, 9:30 AM   | Meetup
+      url: https://www.meetup.com/gdg-ostrava/events/291382153/
+      ical:
+        summary: WTM IWD 2023
+        description: 'GDG Ostrava
+
+          Saturday, March 18 at 9:30 AM
+
+
+          &lt\;p&gt\;A face-to-face event in 3 cities in Czechia and a stream – with a brunch!&lt\;br&gt\;&lt\;/p&gt\;&lt\;p&gt\;2 amazing talks and networking.&amp\;nbs...
+
+
+          https://www.meetup.com/gdg-ostrava/events/291382153/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_291382153@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/291382153/
+        dtstart: 2023-03-18 09:30:00+01:00
+        dtend: 2023-03-18 13:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: I/O 2022 Extended Ostrava Meetup
+        description: 'GDG Ostrava
+
+          Wednesday, May 11 at 4:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-ext...
+
+
+          https://www.meetup.com/gdg-ostrava/events/284926288/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_284926288@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/284926288/
+        dtstart: 2022-05-11 16:00:00+02:00
+        dtend: 2022-05-11 19:00:00+02:00
