--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -50882,3 +50882,26 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691494/
         dtstart: 2023-02-02 09:00:00+01:00
         dtend: 2023-02-02 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Evoluce Pythonu - moderní prostředí, nová syntaxe a trendy
+        description: 'Morning Talks
+
+          Thursday, February 2 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/evoluce-pythonu-moderni-prostredi-nova-syntaxe-a-t...\n
+
+          https://www.meetup.com/morning-talks/events/290691494/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691494@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691494/
+        dtstart: 2023-02-02 09:00:00+01:00
+        dtend: 2023-02-02 10:00:00+01:00
