--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39100,9 +39100,9 @@ series:
         dtstart: 2022-12-05 18:00:00+01:00
         dtend: 2022-12-05 20:00:00+01:00
   - meetupcom:
-      meta_description: '*V čem se nejvíce liší design proces v organizacích různých velikostí a typů? Očekává se od designérů v agenturách, bankách nebo startupech, že budou dodržovat odlišná prav'
-      og_title: 'UX Monday: Design Operations, Mon, Feb 6, 2023, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/291287559/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'UX Monday: Design Operations'
         description: 'Asociace UX
