--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35789,12 +35789,9 @@ series:
         dtstart: 2022-11-08 18:00:00+01:00
         dtend: 2022-11-08 22:00:00+01:00
   - meetupcom:
-      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/504286984947)**
-
-
-        Still confused about how to write a Flutter app? We have some answers for you! Du'
-      og_title: 'Flutter Workshop: Architecture Using GetX, Wed, Feb 8, 2023, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/strv-meetups/events/290868138/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Flutter Workshop: Architecture Using GetX'
         description: 'STRV Meetups
