--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -37679,3 +37679,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/290896746/
         dtstart: 2023-02-02 18:00:00+01:00
         dtend: 2023-02-02 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Flutter Workshop: Architecture Using GetX'
+        description: 'STRV Meetups
+
+          Wednesday, February 8 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/504286984947)** Still confused about how to write a Flutter app? We have some answers for you! During this workshop, w...
+
+
+          https://www.meetup.com/strv-meetups/events/290868138/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290868138@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/290868138/
+        dtstart: 2023-02-08 18:00:00+01:00
+        dtend: 2023-02-08 22:00:00+01:00
