--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39866,3 +39866,26 @@ series:
         url: https://www.meetup.com/asociace-ux/events/291287559/
         dtstart: 2023-02-06 18:00:00+01:00
         dtend: 2023-02-06 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'UX Monday: Design Operations'
+        description: 'Asociace UX
+
+          Monday, February 6 at 6:00 PM
+
+
+          *V čem se nejvíce liší design proces v organizacích různých velikostí a typů? Očekává se od designérů v agenturách, bankách nebo startupech, že budou ...
+
+          \nhttps://www.meetup.com/asociace-ux/events/291287559/'
+        location: Na Valentince (Na Valentince, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291287559@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291287559/
+        dtstart: 2023-02-06 18:00:00+01:00
+        dtend: 2023-02-06 20:00:00+01:00
