--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -28510,9 +28510,9 @@ series:
         dtstart: 2023-01-12 17:00:00+01:00
         dtend: 2023-01-12 19:00:00+01:00
   - meetupcom:
-      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Feb 9, 2023, 5:00 PM   | Meetup
-      url: https://www.meetup.com/czskppug/events/290709857/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: CZSK PPUG Meetup
         description: 'Czech and Slovak Power Platform User Group
@@ -31149,3 +31149,27 @@ series:
         url: https://www.meetup.com/czskppug/events/290709851/
         dtstart: 2023-01-12 17:00:00+01:00
         dtend: 2023-01-12 19:00:00+01:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Jun 8, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709903/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, June 8 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709903/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709903@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709903/
+        dtstart: 2023-06-08 17:00:00+02:00
+        dtend: 2023-06-08 19:00:00+02:00
