data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -10860,14 +10860,14 @@ series:
           Wednesday, March 1 at 7:00 PM
 
 
-          https://www.meetup.com/praguerb/events/dkmktfyfcfbcb/'
+          https://www.meetup.com/praguerb/events/291516531/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfyfcfbcb@meetup.com
-        url: https://www.meetup.com/praguerb/events/dkmktfyfcfbcb/
+        url: https://www.meetup.com/praguerb/events/291516531/
         dtstart: 2023-03-01 19:00:00+01:00
         dtend: 2023-03-01 22:00:00+01:00
   - meetupcom:
@@ -16540,6 +16540,27 @@ series:
         url: https://www.meetup.com/praguerb/events/dkmktfyfcjbkb/
         dtstart: 2023-06-07 19:00:00+02:00
         dtend: 2023-06-07 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, February 1 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/290899038/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfcdbcb@meetup.com
+        url: https://www.meetup.com/praguerb/events/290899038/
+        dtstart: 2023-02-01 19:00:00+01:00
+        dtend: 2023-02-01 22:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
