--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -34579,3 +34579,57 @@ series:
         url: https://www.meetup.com/frontendisti/events/289061411/
         dtstart: 2023-02-08 18:00:00+01:00
         dtend: 2023-02-08 20:00:00+01:00
+  - meetupcom:
+      meta_description: '**Pravidelný meetup komunity [Frontendisti.cz](http://frontendisti.cz/)**
+
+
+        **Program a místo budou upřesněny před konáním akce.**
+
+
+        Svoji přednášku můžeš přihlásit na odkazu'
+      og_title: 'Praha: dubnový meetup | Frontendisti.cz, Wed, Apr 12, 2023, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/frontendisti/events/289061439/
+      ical:
+        summary: 'Praha: dubnový meetup | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, April 12 at 6:30 PM
+
+
+          **Pravidelný meetup komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlásit na odk...
+
+
+          https://www.meetup.com/frontendisti/events/289061439/'
+        location: Menclova 2538 (Menclova 2538, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289061439@meetup.com
+        url: https://www.meetup.com/frontendisti/events/289061439/
+        dtstart: 2023-04-12 18:30:00+02:00
+        dtend: 2023-04-12 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Brno: Diskuzní večer o kompresi dat na webu'
+        description: 'Frontendisti.cz
+
+          Wednesday, February 8 at 6:00 PM
+
+
+          Hospodský sraz komunity (http://frontendisti.cz/). Cílem hospodského srazu je vytvoření diskusního večera. Úplně klasické přednášky tedy nečekejte, za...
+
+
+          https://www.meetup.com/frontendisti/events/289061411/'
+        location: BarCafé Éléphant (Lidická 705/43, Brno-střed-Veveří, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289061411@meetup.com
+        url: https://www.meetup.com/frontendisti/events/289061411/
+        dtstart: 2023-02-08 18:00:00+01:00
+        dtend: 2023-02-08 20:00:00+01:00
