--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39284,11 +39284,9 @@ series:
         dtstart: 2023-01-26 17:30:00+01:00
         dtend: 2023-01-26 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.
-
-        Akci organizují Výzkumatky – Volné sdružení výzkumnic s odbornými zk'
-      og_title: 'Research Tuesday: Výzkum ve veřejném prostoru, Tue, Feb 14, 2023, 9:30 AM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/291344547/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Research Tuesday: Výzkum ve veřejném prostoru'
         description: 'Asociace UX
